@@ -1,5 +1,6 @@
 mesa (8.0~rc1-0ubuntu1) UNRELEASED; urgency=low
 
+  [ Timo Aaltonen ]
   * clean, rules: Move cleaning of xmlpool.pot to rules and remove
     'clean'.
   * Removed patches.
@@ -12,7 +13,11 @@ mesa (8.0~rc1-0ubuntu1) UNRELEASED; urgency=low
   * Update 115_llvm_dynamic_linking.diff,
     116_use_shared_galliumcore.diff to apply.
 
- -- Timo Aaltonen <tjaalton@ubuntu.com>  Tue, 24 Jan 2012 12:47:07 +0200
+  [ Robert Hooker ]
+  * Stop shipping r300/r600 classic drivers in libgl1-mesa-dri-experimental,
+    no longer shipped upstream.
+
+ -- Robert Hooker <sarvatt@ubuntu.com>  Tue, 24 Jan 2012 09:54:54 -0500
 
 mesa (8.0~rc1-1) UNRELEASED; urgency=low
 
